<resources>
    <string name="app_name">Genius</string>

    <string name="action_settings">Settings</string>
    <string name="new_game">Νέο Παιχνίδι</string>
    <string name="continue_game">Συνέχεια Παιχνιδιού</string>
    <string name="rules">Κανόνες</string>
    <string name="add_question">Προσθήκη Ερώτησης</string>
    <string name="title_activity_add_question">AddQuestion</string>
    <string name="send_question">Αποστολή Ερώτησης</string>
    <string name="question">Ερώτηση</string>
    <string name="answer">Απάντηση</string>
    <string name="send">Αποστολή</string>
    <string name="back">Πίσω</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_terms">Terms</string>
     <string name="rules_theplay"> Χωρίστε την παρέα σας σε 2 με 4 ομάδες. Επιλέξτε ονόματα και χρώματα για τις ομάδες σας. Το παιχνίδι ξεκινάει και παίζει η πρώτη ομάδα. Δώστε την συσκευή σε έναν παίχτη που ανήκει σε αντίπαλη ομάδα, ο παίχτης πατά το εικονίδιο του ζαριού και περιμένει να εμφανιστεί το αποτέλεσμα. Υπάρχουν δύο περιπτώσεις αποτελέσματος ζαριού, είτε εμφανίζονται 2 κουμπιά κατηγοριών είτε ένα κουμπί διαμαντιού. Στην πρώτη περίπτωση ο παίχτης που κρατάει την συσκευή ανακοινώνει στην ομάδα που παίζει τις δύο κατηγορίες που έτυχε. Η ομάδα που παίζει αποφασίζει ποια από τις δυο κατηγορίες θέλει να παίξει και ανακοινώνει το αποτέλεσμα στον παίχτη που κρατάει την συσκευή ώστε να πατήσει το αντίστοιχο κουμπί. Στην δεύτερη περίπτωση η παίχτης που κρατά τη συσκευή ανακοινώνει στην ομάδα που παίζει ότι έτυχε ερώτηση για διαμαντάκι και την κατηγορία στην οποία ανήκει αυτό και πατάει το κουμπί διαμάντι.\n\n
    Ο παίχτης που κρατάει τη συσκευή ρωτάει την ερώτηση που εμφανίζεται πάνω στην κάρτα στην ομάδα που παίζει. Η ομάδα αποφασίζει μία απάντηση και την ανακοινώνει στον παίχτη με την συσκευή. Πατώντας πάνω στην κάρτα ο παίχτης μπορεί να την περιστρέψει ώστε να δει την απάντηση (και το αντίθετο). Εάν είναι σωστή η απάντηση ο παίχτης πατάει το κουμπί με το “τικ” αλλιώς το κουμπί με το “χι”. Εάν η απάντηση είναι σωστή η ομάδα συνεχίζει να παίζει και ξαναεπιλέγει κατηγορία, εάν είναι λάθος παίζει η επόμενη ομάδα και εάν ο παίχτης που κρατάει τη συσκευή ανήκει σε αυτή πρέπει να δώσει τη συσκευή σε κάποιο αντίπαλο παίχτη. Στην περίπτωση που κάποια ομάδα απαντήσει σωστά σε ερώτηση διαμάντι τότε κερδίζει το διαμάντι για αυτή την κατηγορία.
    </string>
    <string name="rules_object">Ο σκοπός του παιχνιδιού είναι να μαζέψετε και τα 6 διαμαντάκια κατηγοριών απαντώντας σε ερωτήσεις που σας θέτουν οι αντίπαλοι.</string>
    <string name="rules_endofgame">Η πρώτη ομάδα που θα συγκεντρώσει και τα 6 διαμάντια είναι η νικήτρια ομάδα.</string>
    <string name="rules_general">Το Genius είναι ένα επιτραπέζιο παιχνίδι γενικών γνώσεων για 2 έως 4 ομάδες. Χωρίστε την παρέα σας σε ομάδες και ανακαλύψτε ποια ομάδα είναι ικανή να κερδίσει τον τίτλο του Genius!</string>
    <string name="title_activity_rules">Rules</string>
    <string name="title_activity_saved_games">SavedGames</string>
    <string name="saved_games">Αποθηκευμένα Παιχνίδια</string>
    <string name="terms">Όροι Χρήσης</string>
    <string name="termtext">Σας ευχαριστούμε για την προσπάθεια αποστολής ερώτησης στο παιχνίδι μας. Εκτιμούμε βαθύτατα το ενδιαφέρον σας να συμβάλλεται στο ψυχαγωγικό και εκπαιδευτικό περιεχόμενό της εφαρμογής μας.\n\nΣτέλνοντας μια ερώτηση, συμφωνείτε με τους ακόλουθους όρους:\n-Έχετε τα πλήρη δικαιώματα χρήσης της ερώτησης\n-Παραχωρείτε το δικαίωμα χρήσης της ερώτησης στον νόμιμο ιδιοκτήτη της παρούσας εφαρμογής. Οι ερωτήσεις μπορούν να χρησιμοποιηθούν είτε αυτούσιες είτε σε κάποια παραλλαγμένη μορφή\n-Κατανοείτε οτι η ερώτηση σας μπορεί να μην χρησιμοποιηθεί\n-Κατανοείτε πως η ερώτηση που θα αποστείλετε μπορεί να χρησιμοποιηθεί σε κάποιο πακέτο επέκτασης της εφαρμογής και όχι αναγκαστικά στην παρούσα εφαρμογή.\n-Η αποστολή της ερώτησης γίνεται ανώνυμα\n\nΕπίσης θα θέλαμε να σας παρακαλέσουμε η ερώτηση σας να:\n-Μην είναι λανθασμένη\n-Να μην περιέχει πληροφορίες που αντιτίθενται στο νόμο ή είναι προσβλητικές</string>
    <string name="title_activity_choose_num_of_players">ChooseNumOfPlayers</string>
    <string name="number_of_teams">Αριθμός Ομάδων</string>
    <string name="title_activity_init_teams">InitTeams</string>
    <string name="team1">Ομάδα 1</string>
    <string name="team2">Ομάδα 2</string>
    <string name="team3">Ομάδα 3</string>
    <string name="team4">Ομάδα 4</string>
    <string name="teams_settings">Ρυθμίσεις Ομάδων</string>
    <string name="title_activity_main_game">MainGame</string>
    <string name="title_activity_question">Question</string>
    <string name="title_activity_continue">Continue</string>
    <string name="replay">Ξαναπαίζεις</string>
    <string name="title_activity_report">Report</string>
    <string name="title_activity_winner">Winner</string>
</resources>
