<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".mainMenu"    android:background="@drawable/background">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:scaleType="fitCenter"
        android:layout_centerHorizontal="true"
    />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/newGame"
        android:text="@string/new_game"
        android:onClick="NewGame"
        style="@style/ButtonStyle"
        android:textColor="#ffffffff"
        android:layout_centerHorizontal="true"
    />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/continueGame"
        android:text="@string/continue_game"
        style="@style/ButtonStyle"
        android:textColor="#ffffffff"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:onClick="ContinueGame"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:onClick="Rules"
        android:text="@string/rules"
        android:textColor="#ffffffff"
        android:id="@+id/rules"
        style="@style/ButtonStyle"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/add_question"
        android:id="@+id/addQuestion"
        android:onClick="AddQuestion"
        style="@style/ButtonStyle"
        android:textColor="#ffffffff"
        android:gravity="center"/>


</RelativeLayout>
