<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vncoop.genius.addQuestion"
    android:background="@drawable/background">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/imageView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:alpha="0.15"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/send_question"
        android:id="@+id/titleId"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:textSize="50sp"
        android:gravity="center" />


    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/separatorId"
        android:src="@drawable/separator" />


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id = "@+id/rl0"
            >

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:id="@+id/submitQuestion"
                android:textSize="500sp"
                android:gravity="center_horizontal"
                android:hint="@string/question"
                android:inputType="textMultiLine"
                android:layout_marginTop="10dp"
                style="@style/WhiteRoundedStyle"
                />

            <EditText
                style="@style/WhiteRoundedStyle"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/submitAnswer"
                android:textSize="40sp"
                android:gravity="center_horizontal"
                android:hint="@string/answer"
                android:inputType="textPersonName"
                android:layout_below = "@+id/submitQuestion"
                android:layout_marginTop="10dp"
                />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/submitAnswer"
                android:layout_marginTop="10dp"
                style="@style/ButtonStyle"
                android:onClick="Terms"
                android:id="@+id/relative">

                <CheckBox
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/checkBox"
                    android:textColor="#ffffff"
                    android:checked="false"
                    android:button="@drawable/checkbox"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:id="@+id/legalText"
                    android:textSize="45sp"
                    android:textColor="#ffffff"
                    android:layout_toRightOf="@+id/checkBox"/>
            </RelativeLayout>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/send"
                android:id="@+id/sendQueId"
                android:onClick="sendQuestion"
                style="@style/ButtonStyle"
                android:layout_below="@+id/relative"
                android:layout_marginTop="10dp"
                android:textColor="#ffffffff" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/back"
                android:id="@+id/backId"
                android:onClick="onBack"
                style="@style/ButtonStyle"
                android:layout_below="@+id/relative"

                android:layout_marginTop="10dp"
                android:textColor="#ffffffff" />

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
