<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vncoop.genius.Terms"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:id="@+id/rlid"
    android:background="@drawable/background">


    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/imageView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:alpha="0.15"
        android:visibility="visible" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:id="@+id/scrollView">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="45sp"
                android:text="@string/terms"
                android:layout_marginTop="15dp"
                android:id="@+id/rulesId"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:id="@+id/rulesGeneralId"
                android:text="@string/termtext"
                android:layout_below="@+id/rulesId"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:textColor="#ffffff" />


        </RelativeLayout>
    </ScrollView>


    <Button
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/backId"
        android:onClick="back_click"
        android:text="@string/back"
        android:textColor="#ffffff"
        android:scaleType="fitCenter"
        style="@style/ButtonStyle"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="visible" />

</RelativeLayout>
