<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vncoop.genius.Rules"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:id="@+id/rlid"
    android:background="@drawable/background">


    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/imageView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:alpha="0.15" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:id="@+id/scrollView">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="45sp"
                android:text="Κανόνες"
                android:layout_marginTop="15dp"
                android:id="@+id/rulesId"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:id="@+id/rulesGeneralId"
                android:text="@string/rules_general"
                android:layout_below="@+id/rulesId"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:text="Σκοπός του παιχνιδιού"
                android:id="@+id/gameObjectTitle"
                android:layout_below="@+id/rulesGeneralId"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/rules_object"
                android:id="@+id/gameObject"
                android:layout_below="@+id/gameObjectTitle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:text="Τρόπος παιχνιδιού"
                android:id="@+id/HowToPlayTitle"
                android:layout_below="@+id/gameObject"
                android:layout_centerHorizontal="true"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/rules_theplay"
                android:id="@+id/HowToPlay"
                android:layout_below="@+id/HowToPlayTitle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:text="Τέλος Παιχνιδιού"
                android:id="@+id/EndOfGameTitle"
                android:layout_below="@+id/HowToPlay"
                android:layout_centerHorizontal="true"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/rules_endofgame"
                android:id="@+id/EndOfGame"
                android:layout_below="@+id/EndOfGameTitle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:textColor="#ffffff" />


        </RelativeLayout>
    </ScrollView>


    <ImageButton
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/homeButtonId"
        android:onClick="back_click"
        android:src="@drawable/home_selector"
        android:scaleType="fitCenter"
        style="@style/ButtonStyle"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
